broker side metadata